# ProyectoFinalProg_Estr

./: CMakeLists.txt  alertas.cpp  archivos_texto.cpp  complemento.cpp  formacion.docx  inicio_sesion.cpp  lote.cpp  main.cpp  menus.cpp  movimientos.cpp  producto.cpp  prueba.cpp  registros.cpp  reporte_pdf.cpp  shortcode.cpp  structs.h  usuario.cpp  usuarios.txt
Ex/: estructuras.cpp
